templates/mine_sweeper.css
#game_board {
    display: flex;
    min-height: 700px;
}

.half_container {
    flex:1;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
}

#win_screen {
    animation: 1.8s ease 0s 1 normal both running jello-horizontal;
    transform: translate3d(0, 0, 0);
}

#lose_screen {
    animation: 1.8s ease 0s 1 normal both running wobble-ver-right;
    transform: translate3d(0, 0, 0);
}

#final_screen {
    position: absolute;
    top: 0;
}

#final_screen img {
    max-height: 400px;
    min-height: 400px;
}

.mine_field {
    width:80%;
    top: 0;
    position: absolute;
}

.mine_row {
    display: flex;
    flex-direction: row;
    width:100%;
    padding: 0;
    margin: 0;
}
#opponent_board {
    padding:20px;
}
#user_board {
    padding:20px;
}
#user_board .mine {
}

#opponent_board .mine {
    font-size: 11px;
}

#opponent_board .mine_row {
    height: 15px;
}
.square {
    position: relative;
    flex:1;
    display: flex;
    align-items: center;
    justify-content: center;
}

.square:after {
content: "";
display: block;
padding-bottom: 100%;
}
.mine {
    border: 1px solid black;
    padding: 0;
    margin: 0;
    text-align: center;
    cursor: pointer;
}

.mine.odd {
    background-color: #efe6e1;
}

.mine.even {
    background-color: #e1d5c6;
}

.mine_-2 {
    background-color: lightgrey;
    color: lightgrey;
}

.mine_0.odd.mine {
    background-color: #28b862;
}

.mine_0.even.mine {
    background-color: #2dd160;
}

.mine_-1.odd {
    background-color: black;
    color: red;
}

.mine_-1.even {
    background-color: black;
    color: red;
}

.mine_0.odd {
    background-color: #efe6e1;
}

.mine_1 {
    background-color: lightgrey;
    color: #0054ff;
}

.mine_2 {
    background-color: lightgrey;
    color: #ff8500;
}

.mine_3 {
    background-color: lightgrey;
    color: #ff4c40;
}

.mine_4 {
    background-color: grey;
    color: #ff4c40;
}

.mine_5 {
    background-color: grey;
    color: #ff4c40;
}

